565502: Poor performance with bad hashing on HashMapIntObject
Add more test cases including for performance.
Ignore tests which fail because the fixes to collections have not yet
been done.

Task-Url: https://bugs.eclipse.org/bugs/show_bug.cgi?id=565502

Change-Id: I829a220078d894031a28d8b3241e42266ddfb644